<resources>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="app_name">לבבי</string>
    <string name="action_settings">Settings</string>
    <string name="phone_num">מספר טלפון</string>
    <string name="address">כתובת</string>
    <string name="title">כותרת</string>
    <string name="item">שם פריט</string>
    <string name="units">מס יחידות</string>
    <string name="price">מחיר</string>
    <string name="text">תיאור מוצר</string>
    <string name="wrong_title">שדה הכותרת הוא חובה.</string>
    <string name="wrong_address">שדה הכתובת הוא חובה.</string>
    <string name="wrong_phone">שדה המס טלפון הוא חובה.</string>
    <string name="wrong_info">שדה פרטים הוא חובה.</string>
    <string name="no_connection">אין חיבור לאינטרנט אנא נסו שוב</string>
    <string name="wrong_subject">אנא בחר קטגוריה בבקשה</string>
    <string name="go">סע</string>
    <string name="accept">אישור</string>
    <string name="cancel">ביטול</string>
    <string name="call">צור קשר</string>
    <string name="login">אנא התחבר על מנת להמשיך</string>
    <string name="duration">תוקף ההצעה</string>
    <string name="none">ללא</string>
    <string name="till">תקף עד</string>
    <string name="item_end">תוקף עסקה זו הסתיים</string>
</resources>
