<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#E0E0E0"
              android:padding="10dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_corner"
        android:padding="20dp">


        <TimePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timePicker" />

        <EditText
                android:layout_width="90dp"
                android:layout_height="43dp"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/timePicker"
                android:hint="@string/item"
                android:layout_marginTop="20dp"
                android:id="@+id/item_name"/>
        <EditText
                android:layout_width="100dp"
                android:layout_height="43dp"
                android:hint="@string/units"
                android:id="@+id/units"
                android:layout_alignTop="@+id/item_name"
                android:layout_toStartOf="@+id/item_name"/>
        <EditText
                android:layout_width="90dp"
                android:layout_height="43dp"
                android:hint="@string/price"
                android:id="@+id/price"
                android:layout_alignTop="@+id/item_name"
                android:layout_toStartOf="@+id/units"/>

        <ImageButton
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phone"
                android:layout_marginTop="8dp"
                android:src="@drawable/check"
                android:layout_marginRight="275dp"
                android:id="@+id/add"/>
        <ListView
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:id="@+id/items"
                android:layout_below="@id/units"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/items"
                android:layout_centerHorizontal="true"
                android:id="@+id/submit"
            android:text="submit" />


    </RelativeLayout>
</LinearLayout>